Fixed picture grid font-size on smaller screens.

--- a/mosley_website/Client/Pages/PictureGridNav.razor.css
+++ b/mosley_website/Client/Pages/PictureGridNav.razor.css
@@ -88,7 +88,7 @@
 .title {
     position: relative;
     font-family: "Gorditas", sans-serif;
-    font-size: clamp(1rem, 4vw, 2.5rem);
+    font-size: clamp(2rem, 4vw, 2.5rem);
     text-align: center;
     padding: 1rem;
     z-index: 1;
